# crisis-lens

./: .coveragerc  .pre-commit-config.yaml  PHASE20_COMPLETE.md  README.md  config.py  docker-compose.yml  pyproject.toml  verify_phase11.py
.github/workflows/: deploy.yml  tests.yml
agents/digestion/: evidence_retrieval.py  factcheck_lookup.py  keyframe_extraction.py  nli_veracity.py  novelty_scoring.py  topic_assignment.py
agents/publishing/: advisory_drafting.py  translation.py
apps/api/: main.py
apps/web/: package.json
apps/web/src/app/advisories/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/items/: page.tsx
docker/: Dockerfile.api
ml/media/: deepfake_detector.py  keyframe_extraction.py  reverse_image.py
schemas/: advisory.py  item.py
scripts/: security_audit.py
services/: storage_service.py
