[tool.poetry]
name = "crisis-lens"
version = "0.1.0"
description = "CrisisLens: Verification-first crisis intelligence system"
authors = ["CrisisLens Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
fastapi = "^0.100"
uvicorn = "^0.23"
langgraph = "^0.0.10"
langchain = "^0.1.0"
openai = "^1.0"
redis = "^5.0"
kafka-python = "^2.0"
opensearch-py = "^2.0"
qdrant-client = "^1.0"
neo4j = "^5.0"
sqlalchemy = "^2.0"
alembic = "^1.11"
celery = "^5.3"
spacy = "^3.6"
transformers = "^4.30"
torch = "^2.0"
numpy = "^1.24"
pandas = "^2.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
